# lead_management_app

./: .gitignore  README.md  main.py  pyproject.toml
app/: database.py  lead.py
app/api/: salesland_api_client.py
app/services/: lead_service.py
config/: database.ini
db_scripts/: crear_events.sql  create_bd.sql  create_procedures.sql
